--- a/.backup/www/index.html
+++ b/.backup/www/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/pure-min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
-    <script src="js/loadscript.js"></script>
+    <!--<script src="js/loadscript.js"></script>-->
 
   </head>
 
@@ -74,7 +74,8 @@
 
     <div id="loading_page">
       <div id="loading_welcome">
-        LOVEARIA
+        <b>LOVEARIA</b><br \>
+        <small>Bramblex</small>
       </div>
 
       <div id="loading_info">
@@ -88,7 +89,23 @@
         </div>
 
       </div>
-      <script src="index.js"></script>
+      <!--<script src="index.js"></script>-->
+
+      <script src="js/require.js"></script>
+      <!--<script src="js/example/lib1.js"></script>-->
+      <!--<script src="js/example/lib2.js"></script>-->
+      <!--<script src="js/example/example.js"></script>-->
+
+      <script>
+        require(['js/example/example'], function(e){
+
+          e();
+          e.lib1();
+          e.lib2();
+
+        });
+
+      </script>
   </body>
 
 </html>
