--- a/www/tran.html
+++ b/www/tran.html
@@ -1,6 +1,7 @@
 
 <html>
   <head> 
+    <title>将JavaScript中字符串转换成CharCode数组</title>
     <meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
   </head> 
 
@@ -10,7 +11,7 @@
       输入：
     </p>
     <p>
-      <textarea id="input" style="width: 60%; height: 15em;"></textarea>
+      <textarea id="input" style="width: 60%; height: 15em;">alert('这是测试');</textarea>
     </p>
     <p>
       输出：
