--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>LoveAria.me</title>
+    <meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
   </head>
 
   <body>
