--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
     <p>
       <a href="/tran.html">一个JS转换器</a>
     </p>
+    <p>
+      <a href="/jspcs/tran.html">JS的CPS变换</a>
+    </p>
   </body>
 
 </html>
