--- a/www/tran.html
+++ b/www/tran.html
@@ -28,6 +28,7 @@
         var input = document.getElementById('input');
         var output = document.getElementById('output');
         var tran = document.getElementById('tran');
+        var run = document.getElementById('run');
 
         tran.onclick = function(){
           var code = input.value;
