--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
       <a href="/tran.html">一个JS转换器</a>
     </p>
     <p>
-      <a href="/jspcs/tran.html">JS的CPS变换</a>
+      <a href="/jscps/tran.html">JS的CPS变换</a>
     </p>
   </body>
 
